Adding links to more recent research projects

--- a/Research/index.html
+++ b/Research/index.html
@@ -46,12 +46,81 @@
 									
 									Below are some selected academic projects I have worked on.  Please refer to my <a href = "ctralie_dissertation.pdf">dissertation</a> to see the spark of a lot of this work, as well as my <a href = "https://scholar.google.com/citations?hl=en&user=Ka-p3u0AAAAJ&view_op=list_works&sortby=pubdate">Google scholar</a> for more recent publications.
 
+
+									<p></p><p></p><p></p>
+									<HR><h2>2024</h2>
+									<div class="row 200%">
+										<div class="6u 12u$(medium)">
+											<img src = "OtherPics/TheConcatenator.svg" width=75%>
+										</div>
+										<div class="6u 12u$(medium)">
+													<h4><a href = "../TheConcatenator">The Concatenator: A Bayesian Approach To Concatenative Musaicing</a>.  <u><a href = "http://www.ctralie.com">Christopher J. Tralie</a></u>, <a href = "https://encanti.com/">Ben Cantil ("Encanti")</a>, <a href = "https://ismir2024.ismir.net/">Proceedings of the 25th Conference of the International Society for Music Information Retrieval (ISMIR 2024).</a></h4>
+													<ul>
+													<li>
+														<a href = "https://arxiv.org/pdf/2411.04366">Paper link</a>
+													</li>
+													<li>
+														<a href = "https://github.com/ctralie/TheConcatenator">Code link</a>
+													</li>
+													<li>
+														<a href = "https://www.youtube.com/watch?v=koGyq4komXo">Quick explanatory video</a>
+													</li>
+													<li>
+														<a href = "../TheConcatenator">Supplementary audio, videos, etc</a>
+													</li>
+													<li>
+														<a href = "https://datamindaudio.ai/product-category/concatenator/">DataMind Audio product</a> based on this technology
+													</li>
+													</ul>
+										</div>
+									</div>
+									<p></p><p></p><p></p>
+
+									<div class="row 200%">
+										<div class="6u 12u$(medium)">
+											<img src = "OtherPics/LRRTeaser.png" width=75%>
+										</div>
+										<div class="6u 12u$(medium)">
+													<h4><a href = "https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1012526">Structure-aware annotation of leucine-rich repeat domains</a>.  <a href = "https://math.berkeley.edu/people/grad/boyan-xu">Boyan Xu</a>, <a href = "https://math.berkeley.edu/people/grad/alois-cerbu">Alois Cerbu</a>, <u><a href = "http://www.ctralie.com">Christopher J. Tralie</a></u>, Daven Lim, <a href = "https://plantandmicrobiology.berkeley.edu/users/ksenia-krasileva">Ksenia Krasileva</a></h4>
+													<ul>
+													<li>
+														<a href = "https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1012526">Paper link</a>
+													</li>
+													<li>
+														<a href = "https://github.com/amcerbu/LRR-Annotation/tree/main">Code link</a>
+													</li>
+													</ul>
+										</div>
+									</div>
+									<p></p><p></p><p></p>
+
+									<div class="row 200%">
+										<div class="6u 12u$(medium)">
+											<img src = "OtherPics/HamiltonianTrees.gif" width=75%>
+										</div>
+										<div class="6u 12u$(medium)">
+													<h4><a href = "https://drops.dagstuhl.de/storage/00lipics/lipics-vol293-socg2024/LIPIcs.SoCG.2024.90/LIPIcs.SoCG.2024.90.pdf">Visualizing Lucas’s Hamiltonian Paths Through the Associahedron 1-Skeleton</a>.  Kacey La, Jose Arbelo, <u><a href = "http://www.ctralie.com">Christopher J. Tralie</a></u></h4>
+													<ul>
+													<li>
+														<a href = "https://drops.dagstuhl.de/storage/00lipics/lipics-vol293-socg2024/LIPIcs.SoCG.2024.90/LIPIcs.SoCG.2024.90.pdf">Paper link</a>
+													</li>
+													<li>
+														<a href = "https://associahedron.github.io/viz/">Demo applet</a>
+													</li>
+													<li>
+														<a href = "https://www.youtube.com/watch?v=9WsISXfgwRg">Overview video</a>
+													</li>
+													</ul>
+										</div>
+									</div>
+									<p></p><p></p><p></p>
+
 									<p></p><p></p><p></p>
 									<HR><h2>2023</h2>
 
 									<div class="row 200%">
 										<div class="6u 12u$(medium)">
-											<img src = "OtherPics/VincentOnion.png" width=300>
+											<img src = "OtherPics/VincentOnion.png" width=75%>
 										</div>
 										<div class="6u 12u$(medium)">
 													<h4><a href = "https://ctralie.github.io/GodzillaOnions/">Godzilla Onions: A Skit and Applet to Explain
@@ -69,7 +138,7 @@
 
 									<div class="row 200%">
 										<div class="6u 12u$(medium)">
-											<img src = "OtherPics/StippleTunes.png" width=300>
+											<img src = "OtherPics/StippleTunes.png" width=75%>
 										</div>
 										<div class="6u 12u$(medium)">
 													<h4><a href = "https://ctralie.github.io/StippleTunes/Viewer/">Stipple Tunes</a></b>.  Alexa Lewis, <u><a href = "http://www.ctralie.com">Christopher J. Tralie</a></u><BR><a href = "https://www.evostar.org/2023/evomusart/">12th International Conference on Artificial Intelligence in Music, Sound, Art, And Design: Late Breaking Demo</a></h4>
@@ -91,7 +160,7 @@
 
 									<div class="row 200%">
 										<div class="6u 12u$(medium)">
-											<img src = "OtherPics/audiocurve.png" width=300>
+											<img src = "OtherPics/audiocurve.png" width=75%>
 										</div>
 										<div class="6u 12u$(medium)">
 													<h4><a href = "https://ctralie.github.io/AudioCurveSteganography/viewer/examples/">Artistic Curve Steganography Carried by Musical Audio</a></b>.  <u><a href = "http://www.ctralie.com">Christopher J. Tralie</a></u><BR><a href = "https://www.evostar.org/2023/evomusart/">Proceedings of the 12th International Conference on Artificial Intelligence in Music, Sound, Art, And Design</a></h4>
@@ -113,7 +182,7 @@
 
 									<div class="row 200%">
 										<div class="6u 12u$(medium)">
-											<img src = "OtherPics/p53Nature.png" width=300>
+											<img src = "OtherPics/p53Nature.png" width=75%>
 										</div>
 										<div class="6u 12u$(medium)">
 													<h4><a href = "https://par.nsf.gov/servlets/purl/10359673">Long-term p21 and p53 dynamics regulate the frequency of
@@ -131,7 +200,7 @@
 
 									<div class="row 200%">
 										<div class="6u 12u$(medium)">
-											<img src = "OtherPics/IEEESignalProcessingMag.png" width=300>
+											<img src = "OtherPics/IEEESignalProcessingMag.png" width=75%>
 										</div>
 										<div class="6u 12u$(medium)">
 													<h4><a href = "https://arxiv.org/pdf/2109.02472.pdf">Audio-based musical version identification: Elements and challenges</a></b>.  <a href = "https://furkanyesiler.github.io/">Furkan Yesiler</a>, Guillaume Doras, <a href = "https://research.atspotify.com/2021/08/rachel-bittner-senior-research-scientist/">Rachel Bittner</a>, <u><a href = "http://www.ctralie.com">Christopher J. Tralie</a></u>, <a href = "https://joanserra.weebly.com/">Joan Serrà</a><BR><a href = "https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=79">IEEE Signal Processing Magazine</a></h4>
@@ -149,7 +218,7 @@
 
 									<div class="row 200%">
 										<div class="6u 12u$(medium)">
-											<img src = "FaceJam/thumb.svg" width=300>
+											<img src = "FaceJam/thumb.svg" width=75%>
 										</div>
 										<div class="6u 12u$(medium)">
 													<h4><a href = "https://www.facejam.app">www.facejam.app: Facial Expressions for Musical Expression</a></b>.  <u><a href = "http://www.ctralie.com">Christopher J. Tralie</a>, Parker Fairchild</u><BR><a href = "https://ismir2021.ismir.net/">22<SUP>nd</SUP> International Society for Music Information Retrieval Conference</a> Late Breaking Demo Session</a></h4>
@@ -168,7 +237,7 @@
 
 									<div class="row 200%">
 										<div class="6u 12u$(medium)">
-											<img src = "linmdtw/_static/logo.png" width=250>
+											<img src = "linmdtw/_static/logo.png" width=75%>
 										</div>
 										<div class="6u 12u$(medium)">
 													<h4><a href = "linmdtw">Exact, parallelizable dynamic time warping alignment with linear memory</a></b>. <u>Elizabeth Dempsey, <a href = "http://www.ctralie.com">Christopher J. Tralie</a></u>.  <a href = "https://www.ismir2020.net/">Proceedings of the 21st Conference of the International Society for Music Information Retrieval (ISMIR 2020).</a> (Virtual)</h4>
@@ -183,7 +252,7 @@
 
 									<div class="row 200%">
 										<div class="6u 12u$(medium)">
-											<img src = "p53periodicity/DistributionPlots.svg" width=300>
+											<img src = "p53periodicity/DistributionPlots.svg" width=75%>
 										</div>
 										<div class="6u 12u$(medium)">
 													<h4><a href = "TopoHyperparameterOpt/mottatralie2019_optimizing_topological_features.pdf">Periodicity Scoring of Time Series Encodes Dynamical Behavior of the Tumor Suppressor p53</a></b>. <u><a href = "http://www.math.ucsd.edu/~cmoosmueller/index.html">Caroline Moosm&#252;ller</a>, <a href = "http://www.ctralie.com">Christopher J. Tralie</a></u>, <a href = "https://mahdikooshkbaghi.gitlab.io/">Mahdi Kooshkbaghi</a>, <a href = "https://www2.le.ac.uk/departments/engineering/people/academic-staff/dr-zehor-belkhatir">Zehor Belkhatir</a>, <a href = "https://scholar.google.com/citations?user=2HqjMYwAAAAJ&hl=en">Maryam Pouryahya</a>, <a href = "https://ssqbiophd.hms.harvard.edu/faculty-staff/jose-reyes">Jos&#233; Reyes</a>, <a href = "https://www.mskcc.org/research-areas/labs/joseph-deasy">Joseph O. Deasy</a>, <a href = "https://www.cs.stonybrook.edu/people/faculty/AllenTannenbaum">Allen R. Tannenbaum</a>, <a href = "https://engineering.jhu.edu/chembe/faculty/yannis-kevrekidis/">Ioannis G. Kevrekidis</a>.  <a href = "https://mtns2020.eng.cam.ac.uk/">24th International Symposium on Mathematical Theory of Networks and Systems (MTNS 2020)</a>. </h4>
@@ -201,7 +270,7 @@
 
 									<div class="row 200%">
 										<div class="6u 12u$(medium)">
-											<img src = "TopoHyperparameterOpt/RidgeCoeffs.svg" width=300>
+											<img src = "TopoHyperparameterOpt/RidgeCoeffs.svg" width=75%>
 										</div>
 										<div class="6u 12u$(medium)">
 													<h4><a href = "TopoHyperparameterOpt/mottatralie2019_optimizing_topological_features.pdf">Hyperparameter Optimization of Topological Features for Machine Learning Applications</a></b>. <u><a href = "http://www.math.fau.edu/people/faculty/francis_motta.php">Francis Motta</a>, <a href = "http://www.ctralie.com">Christopher J. Tralie</a></u>, et. al.  <a href = "https://www.icmla-conference.org/icmla19/docs/SS_TopologicalDataAnalysis.pdf">Special Session on Topological Data Analysis in Machine Learning, IEEE ICMLA-2019</a>, Boca Raton, Florida. </h4>
@@ -214,7 +283,7 @@
 
 									<div class="row 200%">
 										<div class="6u 12u$(medium)">
-											<img src = "Datacos.png" width="300">
+											<img src = "Datacos.png" width=75%>
 										</div>
 										<div class="6u 12u$(medium)">
 													<h4><a href = "https://repositori.upf.edu/bitstream/handle/10230/42771/yesiler_ismir19_datacos.pdf?sequence=1&isAllowed=y">Da-TACOS: a dataset for cover song identification and understanding</a></b>. <u><a href = "https://scholar.google.com/citations?user=5zDk0yIAAAAJ&hl=en">Furkan Yesiler</a>, <a href = "http://www.ctralie.com">Christopher J. Tralie</a></u>, <a href = "https://albincorreya.github.io/">Albin Correya</a>, <a href = "https://dl.acm.org/profile/87059755857">Diego F. Silva</a>, <a href = "https://philtgun.me/">Philip Tovstogan</a>, <a href = "https://emiliagomez.com/">Emilia Gomez</a>, <a href = "https://www.upf.edu/web/xavier-serra">Xavier Serra</a>.  <a href = "https://ismir2019.ewi.tudelft.nl/">20<SUP>th</SUP> International Society for Music Information Retrieval Conference</a>, 2019, Delft, The Netherlands. </h4>
@@ -229,7 +298,7 @@
 
 									<div class="row 200%">
 										<div class="6u 12u$(medium)">
-											<img src = "ScatteringSNFSSM/SSMScatteringExample.png" width="300">
+											<img src = "ScatteringSNFSSM/SSMScatteringExample.png" width=75%>
 										</div>
 										<div class="6u 12u$(medium)">
 													<h4><a href = "SSMTW">Multi-scale Geometric Summaries
@@ -245,7 +314,7 @@
 									<p></p><p></p><p></p>
 									<div class="row 200%">
 										<div class="6u 12u$(medium)">
-											<img src = "TwistyTakens/KleinProj.png" width=300>
+											<img src = "TwistyTakens/KleinProj.png" width=75%>
 										</div>
 										<div class="6u 12u$(medium)">
 													<h4><a href = "https://arxiv.org/abs/1809.07131">Twisty Takens: A Geometric Characterization of Good Observations on Dense Trajectories</a></b>.  <BR><a href = "https://math.berkeley.edu/people/grad/boyan-xu">Boyan Xu</a>, <u><a href = "http://www.ctralie.com">Christopher J. Tralie</a></u>, Alice Antia, Michael Lin, <a href = "https://cmse.msu.edu/directory/faculty/jose-perea/">Jose A. Perea</a><BR>
@@ -263,7 +332,7 @@
 									<p></p><p></p><p></p>
 									<div class="row 200%">
 										<div class="6u 12u$(medium)">
-											<img src = "StructureFusion_ICASSP/thumb.png" width="300">
+											<img src = "StructureFusion_ICASSP/thumb.png" width=75%>
 										</div>
 										<div class="6u 12u$(medium)">
 											<h4><a href = "https://arxiv.org/pdf/1902.01023.pdf">"Enhanced Hierarchical Music Structure Annotations via Feature Level Similarity Fusion."</a></b><u><a href = "http://www.ctralie.com">Christopher J. Tralie</a></u>, <a href = "https://bmcfee.github.io/">Brian McFee</a>.<BR><a href = "https://2019.ieeeicassp.org/">International Conference on Acoustics, Speech, And Signal Processing (ICASSP), 2019, Brighton, UK</h4>
