Adding supplementary material for echoes paper

--- a/Research/index.html
+++ b/Research/index.html
@@ -48,6 +48,30 @@
 
 
 									<p></p><p></p><p></p>
+									<HR><h2>2025</h2>
+									<div class="row 200%">
+										<div class="6u 12u$(medium)">
+											<img src = "../echoes/RaveCepstra_groove.svg" width=100%>
+										</div>
+										<div class="6u 12u$(medium)">
+													<h4><a href = "../echoes">Hidden Echoes Survive Training in Audio To Audio Generative Instrument Models</a>.  <u><a href = "http://www.ctralie.com">Christopher J. Tralie</a></u>, Matt Amery, Benjamin Douglas, Ian Utz, <a href = "https://ai4musicians.org/2025aaai.html">Proceedings of the workshop on artificial intelligence for Music at AAAI 2025.</a></h4>
+													<ul>
+													<li>
+														<a href = "../echoes/writeup.pdf">Paper link</a>
+													</li>
+													<li>
+														<a href = "../echoes/index.html">Supplementary material</a>
+													</li>
+													<li>
+														<a href = "https://github.com/ctralie/Audio2AudioEchoes">Code link</a>
+													</li>
+													</ul>
+										</div>
+									</div>
+									<p></p><p></p><p></p>
+
+
+									<p></p><p></p><p></p>
 									<HR><h2>2024</h2>
 									<div class="row 200%">
 										<div class="6u 12u$(medium)">
