Linking to models

--- a/Research/index.html
+++ b/Research/index.html
@@ -57,13 +57,16 @@
 													<h4><a href = "../echoes">Hidden Echoes Survive Training in Audio To Audio Generative Instrument Models</a>.  <u><a href = "http://www.ctralie.com">Christopher J. Tralie</a></u>, Matt Amery, Benjamin Douglas, Ian Utz, <a href = "https://ai4musicians.org/2025aaai.html">Proceedings of the workshop on artificial intelligence for Music at AAAI 2025.</a></h4>
 													<ul>
 													<li>
-														<a href = "../echoes/writeup.pdf">Paper link</a>
+														<a href = "../echoes/ctralie_audio2audioechoes.pdf">Paper link</a>
 													</li>
 													<li>
 														<a href = "../echoes/index.html">Supplementary material</a>
 													</li>
 													<li>
 														<a href = "https://github.com/ctralie/Audio2AudioEchoes">Code link</a>
+													</li>
+													<li>
+														<a href = "https://filedn.com/lAEQ8ShUNLzjcOukVHsWG0z/ArtistProtectModels/">Trained Rave, Dance Diffusion, And DDSP Models</a>
 													</li>
 													</ul>
 										</div>
