--- a/echoes/index.html
+++ b/echoes/index.html
@@ -81,10 +81,13 @@
 
 <ul>
     <li>
-        <h3><a href = "writeup.pdf">Writeup</a></h3>
+        <h3><a href = "ctralie_audio2audioechoes.pdf">Writeup</a></h3>
     </li>
     <li>
         <h3><a href = "https://github.com/ctralie/Audio2AudioEchoes">Source Code</a></h3>
+    </li>
+    <li>
+        <h3><a href = "https://filedn.com/lAEQ8ShUNLzjcOukVHsWG0z/ArtistProtectModels/">Trained Rave, Dance Diffusion, And DDSP Models</a></h3>
     </li>
 </ul>
 
