one more thing!

--- a/echoes/index.html
+++ b/echoes/index.html
@@ -77,19 +77,21 @@
 <h2>Hidden Echoes Survive Training in Audio To Audio Generative Instrument Models</h2>
 <p></p>
 
+<h3><a href = "https://ai4musicians.org/2025aaai.html">2025 AAAI Workshop on Artificial Intelligence for Music</a></h3>
+
+
 <h3>Christopher J. Tralie, Matt Amery, Benjamin Douglas, Ian Utz</h3>
 
-<ul>
-    <li>
-        <h3><a href = "ctralie_audio2audioechoes.pdf">Writeup</a></h3>
-    </li>
-    <li>
-        <h3><a href = "https://github.com/ctralie/Audio2AudioEchoes">Source Code</a></h3>
-    </li>
-    <li>
-        <h3><a href = "https://filedn.com/lAEQ8ShUNLzjcOukVHsWG0z/ArtistProtectModels/">Trained Rave, Dance Diffusion, And DDSP Models</a></h3>
-    </li>
-</ul>
+<HR>
+
+<h3><a href = "ctralie_audio2audioechoes.pdf">Writeup</a></h3>
+<p></p>
+
+<h3><a href = "https://github.com/ctralie/Audio2AudioEchoes">Source Code</a></h3>
+<p></p>
+<h3><a href = "https://filedn.com/lAEQ8ShUNLzjcOukVHsWG0z/ArtistProtectModels/">Trained Rave, Dance Diffusion, And DDSP Models</a></h3>
+<p></p>
+
 
 <h3>Abstract</h3>
 <p>
