Linking spring cousres

--- a/Teaching/index.html
+++ b/Teaching/index.html
@@ -46,11 +46,17 @@
 										<b>NOTE: </b> As a small liberal arts college, Ursinus generally caps classes at 25 students.
 									</p>
 
+									<h2>Spring 2025</h2>
+									<ul>
+										<li><h3><a href = "https://digitalmusicprocessing.github.io/S2025/">CS 372: Digital Music Processing</a> (20 Students)</h3>  </li>
+										<li><h3><a href = "https://ursinusnetworks.github.io/S2025/">CS 475: Computer Networks</a> (23 Students)</h3></li>
+									</ul>
+
 									<h2>Fall 2024</h2>
 									<ul>
 										<li><h3><a href = "https://ursinusdatastructures.github.io/F2024/">CS 271: Algorithms And Data Structures</a> (20 Students)</h3>  </li>
 										<li><h3><a href = "https://ursinusgraphics.github.io/F2024/">CS 476: Computer Graphics</a> (24 Students)</h3></li>
-										<li><h3><a href = "https://ursinus-cie100j-f2024.github.io/CoursePage/">CIE 100: Common Intellectual Experience I</a> (17 Students)</h3></li>
+										<li><h3><a href = "https://ursinus-cie100j-f2024.github.io/CoursePage/">CIE 100: Common Intellectual Experience I</a> (16 Students)</h3></li>
 									</ul>
 
 									<h2>Spring 2023</h2>
