--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
                                         <p>
                                             Now that I am a faculty member, I will not accept military funding of any sort.  <a href = "https://web.eecs.umich.edu/~kuipers/opinions/no-military-funding.html">Benjamin Kuipers</a> gives well reasoned arguments I agree with, and his experience parallels mine in many ways.  I hope more people will stand with us on this issue as we work to decenter the military industrial complex.
                                         </p>
+										<p>
+											Related to the above, <a href = "https://ctralie.substack.com/p/the-bang-for-the-buck-of-nsf">click here</a> to read an essay I wrote about how the National Science Foundation (NSF) changed my life, and why we shouldn't be cutting funding to such a crucial agency.
+										</p>
 									</div>
 									<span>
 									
