--- a/Teaching/index.html
+++ b/Teaching/index.html
@@ -50,6 +50,7 @@
 									<ul>
 										<li><h3><a href = "https://digitalmusicprocessing.github.io/S2025/">CS 372: Digital Music Processing</a> (20 Students)</h3>  </li>
 										<li><h3><a href = "https://ursinusnetworks.github.io/S2025/">CS 475: Computer Networks</a> (23 Students)</h3></li>
+										<li><h3>CS 391: Research Independent Study on JPEG for Artistic Purposes (1 Student)</h3></li>
 									</ul>
 
 									<h2>Fall 2024</h2>
@@ -231,7 +232,7 @@
 
 
 									<p>
-									As part of the <a href = "https://gradschool.duke.edu/professional-development/programs/bass-instructional-fellowships/bass-instructor-record-fellowships">Bass Instructor of Record Fellowship</a>, I designed a new undergraduate course at Duke University cross-listed between computer science and math. The course was a ground up approach to 3D geometry with a statistics and signal processing focus. Assignments were in Javascript/WebGL and Python/Numpy, including sound modeling in virtual acoustic environments, rotation modeling with Euler angles and quaternions, 3D shape statistics ("Shape Google"), 3D shape alignment, and spectral mesh processing.
+									As part of the <a href = "https://gradschool.duke.edu/professional-development/programs/bass-instructional-fellowships/bass-instructor-record-fellowships">Bass Instructor of Record Fellowship</a>, I designed a new undergraduate course at Duke University cross-listed between computer science and math during the spring 2016 semester. The course was a ground up approach to 3D geometry with a statistics and signal processing focus. Assignments were in Javascript/WebGL and Python/Numpy, including sound modeling in virtual acoustic environments, rotation modeling with Euler angles and quaternions, 3D shape statistics ("Shape Google"), 3D shape alignment, and spectral mesh processing.  This course was rated in the top 5% of courses university wide that semester in "quality of course/intellectual stimulation," based on student evaluations.
 									</p>
 
 									<p>
