--- a/Research/GASPGroup/index.html
+++ b/Research/GASPGroup/index.html
@@ -66,7 +66,7 @@
 						<div class="row 200%">
 							<div class="6u 6u$(medium)">
 								<h3>Josh Brown</h3>
-								<img src = "JoshBrown.png" width="100%">
+								<img src = "JoshBrown.jpg" width="50%">
 
 							</div>
 							<div class="4u 4u$(medium)">
