--- a/Research/GASPGroup/index.html
+++ b/Research/GASPGroup/index.html
@@ -55,6 +55,7 @@
 						<div class="row 200%">
 							<div class="6u 6u$(medium)">
 								<h3>Aleni Voskeridjian</h3>
+								<img src = "alenijpeg.gif" width="50%">
 								
 
 							</div>
