Left academiagit add -u

--- a/Teaching/index.html
+++ b/Teaching/index.html
@@ -43,7 +43,17 @@
 										<h1><a name = "classes">Classes</a></h1>
 									</header>
 									<p>
-										<b>NOTE: </b> As a small liberal arts college, Ursinus generally caps classes at 25 students.
+										I am no longer serving as a professor, but when I taught, my teaching specialties were in CS theory (<a href = "https://ursinus-cs271-f2023.github.io/CoursePage/index.html">data structures</a>, <a href = "https://ursinus-cs373-f2023.github.io/CoursePage/">theory of computation</a>) and CS applications (<a href = "https://ursinus-cs476-f2022.github.io/CoursePage/">computer graphics</a>, <a href = "https://ursinus-cs372-s2023.github.io/CoursePage/index.html">digital music processing</a>, and <a href = "https://ursinus-cs477-f2023.github.io/CoursePage/">artificial intelligence</a>).  Over the years, I made myriad open source teaching materials and videos on <a href = "https://www.youtube.com/ctralie">my Youtube Channel</a>, and I was twice recognized by the Association for Computing Machinery (ACM) in the prestigious "<a href = "http://nifty.stanford.edu/">nifty assignments</a>" track. 
+
+										
+									</p>
+
+									<p>
+										Now I make videos on <a href = "https://www.youtube.com/ctralie">YouTube</a> for even wider audiences.
+									</p>
+
+									<p>
+										Below is an archive of the courses I taught:
 									</p>
 
 									<h2>Spring 2025</h2>
