--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 										
 										<h3>Open To Work!</h3>
 										<p>
-											<b>I am on the industry job market this fall (2025)</b>.  If you could use a research scientist and/or engineer (yes, I can do both!) with expertise in signal processing (especially audio), geometry processing (especially 3D), algorithm design, and/or machine learning, drop me a line and we can chat.
+											<b>I am on the industry job market this fall (2025)</b>.  If you could use a research scientist and/or engineer (yes, I can do both!) with expertise in signal processing (especially audio), geometry processing (especially 3D), algorithm design, and/or machine learning, drop me a line and we can chat.  <a href = "https://www.youtube.com/watch?v=JJv3UhDboGs">Click here</a> to see a recent example of how I work/think.
 										</p>
 
 										<h3>Overview</h3>
