--- a/Research/GASPGroup/index.html
+++ b/Research/GASPGroup/index.html
@@ -576,6 +576,25 @@
 
 						<div class="row 200%">
 							<div class="4u 4u$(medium)">
+								<h3>Teddi And Toby Litovsky</h3>
+								<img src = "toastie.jpeg" width="100%">
+							</div>
+							<div class="4u 4u$(medium)">
+
+								<p></p><p></p><p></p>
+								<h4>Areas of specialization</h4>
+								Science communication, public speaking (toast master)
+
+								
+								<p></p><p></p><p></p>
+								
+								<h4>Administrative assistants</h4>
+								<a href = "https://www.linkedin.com/in/abby-litovsky-28594773">Abby McNeill (formerly Litovsky)</a>, Jeremy McNeill
+							</div>
+						</div>
+
+						<div class="row 200%">
+							<div class="4u 4u$(medium)">
 								<h3>Amelia Besnoff-Virgil</h3>
 								<img src = "Amelia.png" width="100%">
 							</div>
