--- a/Research/GASPGroup/index.html
+++ b/Research/GASPGroup/index.html
@@ -576,7 +576,7 @@
 
 						<div class="row 200%">
 							<div class="4u 4u$(medium)">
-								<h3>Teddi And Toby Litovsky</h3>
+								<h3>Toastie McNeill</h3>
 								<img src = "toastie.jpeg" width="100%">
 							</div>
 							<div class="4u 4u$(medium)">
