Bye bye academia

--- a/Research/GASPGroup/index.html
+++ b/Research/GASPGroup/index.html
@@ -50,6 +50,47 @@
 					<p></p><p></p><p></p>
 						<h1><a name = "students">Students / Student Projects</a></h2>
 
+<HR>
+						<h2>Fall 2025</h2>
+						<div class="row 200%">
+							<div class="6u 6u$(medium)">
+								<h3>Aleni Voskeridjian</h3>
+								<img src = "alenivoronoi.png" width="50%">
+								
+
+							</div>
+							<div class="4u 4u$(medium)">
+								<h4>Multidimensional Voronoi Images And Line Detection</h4>
+							</div>
+						</div>
+
+						<div class="row 200%">
+							<div class="6u 6u$(medium)">
+								<h3>Josh Brown</h3>
+								<img src = "JoshBrown2.png" width="50%">
+
+							</div>
+							<div class="4u 4u$(medium)">
+								<h4>Real Time Web Audio Vocoder with Audio Worklets And Emscripten</h4>
+								<ul>
+									<li><a href = "web-audio-research/vocoder/vocoder.html">Live vocoder!</a></li>
+									<li><a href = "web-audio-research/spectrogram/web-spectrogram.html">Live spectrogram!</a></li>
+								</ul>
+							</div>
+						</div>
+
+						<div class="row 200%">
+							<div class="6u 6u$(medium)">
+								<h3>Emily Musgrove</h3>
+								<img src = "EmilyMusgrove.jpg" width="50%">
+								
+
+							</div>
+							<div class="4u 4u$(medium)">
+								<h4>Sheep Herding Godot Game</h4>
+							</div>
+						</div>
+
 						<HR>
 						<h2>Spring 2025</h2>
 						<div class="row 200%">
