--- a/Teaching/index.html
+++ b/Teaching/index.html
@@ -56,6 +56,24 @@
 										Below is an archive of the courses I taught:
 									</p>
 
+									<h2>Fall 2025</h2>
+									<ul>
+										<li>
+											<h3>CS 391: Research Independent Study (2 Students)</h3>
+											<ul>
+												<li><h4>Real Time Web Audio <a href = "../Research/GASPGroup/web-audio-research/vocoder/vocoder.html">Vocoder</a> with Audio Worklets And Emscripten</h4>
+												</li>
+												<li><h4>Sheep Herding Godot Game</h4></li>
+											</ul>
+										</li>
+										<li>
+											<h3>CS 394: Research Independent Study (1 Student)</h3>
+											<ul>
+												<li><h4>Multidimensional Voronoi Images And Line Detection</h4></li>
+											</ul>
+										</li>
+									</ul>
+
 									<h2>Spring 2025</h2>
 									<ul>
 										<li><h3><a href = "https://digitalmusicprocessing.github.io/S2025/">CS 372: Digital Music Processing</a> (20 Students)</h3>  </li>
