--- a/Research/GASPGroup/index.html
+++ b/Research/GASPGroup/index.html
@@ -60,7 +60,7 @@
 
 							</div>
 							<div class="4u 4u$(medium)">
-								<h4>Multidimensional Voronoi Images And Line Detection</h4>
+								<h4>A Voronoi Image Plugin in Krita</h4>
 							</div>
 						</div>
 
