--- a/Teaching/index.html
+++ b/Teaching/index.html
@@ -69,7 +69,7 @@
 										<li>
 											<h3>CS 394: Research Independent Study (1 Student)</h3>
 											<ul>
-												<li><h4>Multidimensional Voronoi Images And Line Detection</h4></li>
+												<li><h4>A Voronoi Image Plugin in Krita</h4></li>
 											</ul>
 										</li>
 									</ul>
